# IterCpp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: demo.cpp
include/itercpp/: itercpp.hpp
tests/: test_itercpp.cpp
